Introduced CasUserDetailsService to retrieve additional user attributes from CAS

--- a/mvc-security-cas/cas-server/src/main/cas-server-config/cas.properties
+++ b/mvc-security-cas/cas-server/src/main/cas-server-config/cas.properties
@@ -48,6 +48,18 @@ cas.authn.ldap[0].bindCredential=Giuseppe1234
 cas.authn.ldap[0].userFilter=cn={user}
 cas.authn.ldap[0].dnFormat=CN=%s,OU=Stet,OU=Utenti,DC=testad,DC=com
 
+cas.authn.attributeRepository.ldap[0].ldapUrl=ldap://192.168.56.106:389
+cas.authn.attributeRepository.ldap[0].useSsl=false
+cas.authn.attributeRepository.ldap[0].baseDn=OU=Stet,OU=Utenti,DC=testad,DC=com
+cas.authn.attributeRepository.ldap[0].bindDn=CN=Administrator,CN=Users,DC=testad,DC=com
+cas.authn.attributeRepository.ldap[0].bindCredential=Giuseppe1234
+cas.authn.attributeRepository.ldap[0].userFilter=cn={user}
+
+cas.authn.attributeRepository.ldap[0].attributes.givenName=givenName
+cas.authn.attributeRepository.ldap[0].attributes.sn=sn
+cas.authn.attributeRepository.ldap[0].attributes.mail=mail
+
+
 ## JDBC DB Authentication (marco / 12345) - MD5 (luca / 12345)
 ## ----------------------------------
 #cas.jdbc.showSql=true
